--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "laravel/framework": "^8.82"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "doctrine/coding-standard": "^9.0",
+        "laravel-doctrine/orm": "^1.7",
+        "orchestra/testbench": "^6.24"
     },
     "license": "MIT",
     "autoload": {
