--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "doctrine/coding-standard": "^9.0",
+        "doctrine/dbal": "^2.13",
         "laravel-doctrine/orm": "^1.7",
         "orchestra/testbench": "^6.24"
     },
