--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": "^8.0",
         "doctrine/data-fixtures": "^1.5",
-        "laravel/framework": "^8.82",
+        "laravel/framework": "^8.82||^9.0",
         "vimeo/psalm": "^4.20"
     },
     "require-dev": {
