--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,15 @@
     "require": {
         "php": "^8.0",
         "doctrine/data-fixtures": "^1.5",
-        "laravel/framework": "^8.82||^9.0",
-        "vimeo/psalm": "^4.20"
+        "laravel/framework": "^8.82 || ^9.0 || ^10.0 || ^11.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "doctrine/coding-standard": "^9.0",
+        "doctrine/coding-standard": "^9",
         "doctrine/dbal": "^2.13",
         "laravel-doctrine/orm": "^1.7",
-        "orchestra/testbench": "^6.24"
+        "orchestra/testbench": "^6.24",
+        "vimeo/psalm": "^4.20 || ^5.0"
     },
     "license": "MIT",
     "autoload": {
@@ -37,6 +37,11 @@
             "providers": [
                 "ApiSkeletons\\Laravel\\Doctrine\\DataFixtures\\ServiceProvider"
             ]
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     }
 }
